tests/baselines/reference/checkJsxNotSetError.errors.txt
/bar.jsx(1,17): error TS6142: Module '/foo' was resolved to '/foo.jsx', but '--jsx' is not set.
/bar.jsx(2,11): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
/foo.jsx(2,5): error TS17004: Cannot use JSX unless the '--jsx' flag is provided.


==== /foo.jsx (1 errors) ====
    const Foo = () => (
        <div>foo</div>
        ~~~~~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.
    );
    export default Foo;
    
==== /bar.jsx (2 errors) ====
    import Foo from '/foo';
                    ~~~~~~
!!! error TS6142: Module '/foo' was resolved to '/foo.jsx', but '--jsx' is not set.
    const a = <Foo />
              ~~~~~~~
!!! error TS17004: Cannot use JSX unless the '--jsx' flag is provided.